--- a/calculator 2/index.html
+++ b/calculator 2/index.html
@@ -16,19 +16,19 @@
             <button onclick="getNumber('1')">1</button>
             <button onclick="getNumber('2')">2</button>
              <button onclick="getNumber('3')">3</button>
-            <button onclick="getNumber('+')">+</button>
+            <button onclick="opertor('+')">+</button>
             <button onclick="getNumber('4')">4</button>
             <button onclick="getNumber('5')">5</button>
              <button onclick="getNumber('6')">6</button>
-            <button onclick="getNumber('-')">-</button>
+            <button onclick="opertor('-')">-</button>
             <button onclick="getNumber('7')">7</button>
             <button onclick="getNumber('8')">8</button>
              <button onclick="getNumber('9')">9</button>
-            <button onclick="getNumber('*')">*</button>
-            <button onclick="calculate('Ce')">Ce</button>
+            <button onclick="opertor('*')">*</button>
+            <button onclick="clear('Ce')">Ce</button>
             <button onclick="getNumber('0')">0</button>
              <button onclick="calculate('=')">=</button>
-            <button onclick="getNumber('/')">/</button>
+            <button onclick="opertor('/')">/</button>
           
         </section>
     </div>
