--- a/game/index.html
+++ b/game/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div id="container">
-<img src="./pic/toki stand.gif" alt="">
+<img  id="character1" class="char"  src="./pic/rougestay.gif" alt="">
+<img  id="character2" class="char"  src="./pic/sakurastay2.gif" alt="">
     </div>
     <script src="app.js"></script>
 </body>
