--- a/postr/index.html
+++ b/postr/index.html
@@ -1,110 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-    <form id="signupBox" style="display: block;">
-  <div class="form-header" >
-        <img src="https://st3.depositphotos.com/1688079/14910/i/450/depositphotos_149101379-s
-        tock-photo-email-icon-elegant-white-diamond.jpg" alt="" class="img1">
-    <h1>Sign Up Form</h1>
-  </div>
+  <body>
+    <form id="signupBox" style="display: none">
+      <div class="form-header">
+        <img
+          src="https://st3.depositphotos.com/1688079/14910/i/450/depositphotos_149101379-s
+        tock-photo-email-icon-elegant-white-diamond.jpg"
+          alt=""
+          class="img1"
+        />
+        <h1>Sign Up Form</h1>
+      </div>
 
-  <div class="form-row">
-    <div class="firstrow">
-      <label for="fname">First Name</label>
-      <input type="text" id="fname ">
+      <div class="form-row">
+        <div class="firstrow">
+          <label for="fname">First Name</label>
+          <input type="text" id="fname" />
+        </div>
+        <div>
+          <label for="lname">Last Name</label>
+          <input type="text" id="lname" />
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div>
+          <label for="email">Email</label>
+          <input type="email" id="email" />
+        </div>
+        <div>
+          <label for="pass">Password</label>
+          <input type="password" id="pass" />
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div>
+          <label for="mob">Phone</label>
+          <input type="number" id="mob" placeholder="####-######" />
+        </div>
+        <div>
+          <label for="city">City</label>
+          <input type="text" id="city" />
+        </div>
+      </div>
+      <div class="but">
+        <!-- <button id="signup" onclick="linktoother()">Sign Up</button> -->
+        <input
+          type="button"
+          name="Sign Up"
+          id="signup"
+          onclick="createaccount()"
+          value="Sign Up"
+        />
+      </div>
+    </form>
+    <!-- postcard -->
+    <div id="postcard" class="postapp" style="display: block">
+      <nav class="navbar navbar-expand-lg mynav">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"
+            ><img src="./img/message.png" alt="" height="80px"
+          /></a>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active post" aria-current="page" href="#"
+                  >Post Card</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- end of nav -->
+      <div class="row">
+        <div class="maincontent">
+          <div class="text">
+            <label for="title" id="title">Title</label>
+            <input type="text" id="postinput" />
+          </div>
+          <div class="descrip">
+            <label for="description">Description</label>
+            <textarea id="about"></textarea>
+          </div>
+          <div class="but1">
+            <button onclick="showPostcard()" class="but11">Post It!</button>
+          </div>
+          <div id="display">
+            <div class="card" style="width: 18rem;">
+              <!-- <div class="card-body">
+                <h5 class="card-title"> title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div> -->
     </div>
-    <div >
-      <label for="lname">Last Name</label>
-      <input type="text" id="lname">
-    </div>
-  </div>
 
-  <div class="form-row">
-    <div>
-      <label for="email">Email</label>
-      <input type="email" id="email">
-    </div>
-    <div>
-      <label for="pass">Password</label>
-      <input type="password" id="pass">
-    </div>
-  </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
 
-  <div class="form-row">
-    <div>
-      <label for="mob">Phone</label>
-      <input type="number" id="mob" placeholder="####-######">
-    </div>
-    <div>
-      <label for="city">City</label>
-      <input type="text" id="city">
-    </div>
-  </div>
-<div class="but">
-  <!-- <button id="signup" onclick="linktoother()">Sign Up</button> -->
-  <input type="button" name="Sign Up" id="signup" onclick="createaccount()" value="Sign Up">
-</div>
-</form>
-<!-- postcard -->
- <div class="postapp" style="display: none;">
-  <nav class="navbar navbar-expand-lg mynav" >
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="./img/message.png" alt="" height="80px"></a>
-    
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active post" aria-current="page" href="#">Post Card</a>
-        </li>
-      </ul>
-
-    </div>
-  </div>
-</nav> 
-<!-- end of nav -->
-<div class="row">
-  <div class="maincontent">
- <div class="text"> <label for="title" id="title">Title</label>
-  <input type="text" id="postinput"></div>
-    <div class="descrip">
-       <label for="description">Description</label>
-    <textarea id="about" ></textarea>
-    </div>
-    <div class="but1">
-          <button onclick="showPostcard()" class="but11">Post It!</button>
-
-    </div>
-    <div id="display"></div>
-</div>
-
-</div>
-
- </div>
-
-
-
-
-
-
-
-
-
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="app.js"></script>
-</body>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
+    <script src="app.js"></script>
+  </body>
 </html>
