--- a/postr/index.html
+++ b/postr/index.html
@@ -15,7 +15,8 @@
   </head>
 
   <body>
-    <form id="signupBox" style="display: none">
+    <div class="formdiv"  style="display: none">
+    <form id="signupBox">
       <div class="form-header">
         <img
           src="https://st3.depositphotos.com/1688079/14910/i/450/depositphotos_149101379-s
@@ -69,6 +70,7 @@
         />
       </div>
     </form>
+    </div>
     <!-- postcard -->
     <div id="postcard" class="postapp" style="display: block">
       <nav class="navbar navbar-expand-lg mynav">
