--- a/postr/index.html
+++ b/postr/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <div class="formdiv"  style="display: none">
+    <div class="formdiv"  style="display: block">
     <form id="signupBox">
       <div class="form-header">
         <img
@@ -72,7 +72,7 @@
     </form>
     </div>
     <!-- postcard -->
-    <div id="postcard" class="postapp" style="display: block">
+    <div id="postcard" class="postapp" style="display: none">
       <nav class="navbar navbar-expand-lg mynav">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
