--- a/postr/index.html
+++ b/postr/index.html
@@ -14,7 +14,7 @@
     <title>Document</title>
   </head>
 
-  <body>
+  
     <div class="formdiv"  style="display: block">
     <form id="signupBox">
       <div class="form-header">
@@ -60,7 +60,6 @@
         </div>
       </div>
       <div class="but">
-        <!-- <button id="signup" onclick="linktoother()">Sign Up</button> -->
         <input
           type="button"
           name="Sign Up"
@@ -72,7 +71,7 @@
     </form>
     </div>
     <!-- postcard -->
-    <div id="postcard" class="postapp" style="display: none">
+    <div id="postcard" class="container-fluid postapp" style="display: none">
       <nav class="navbar navbar-expand-lg mynav">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
@@ -92,7 +91,8 @@
       </nav>
       <!-- end of nav -->
       <div class="row">
-        <div class="maincontent">
+        <div class="col-6">
+        <div class="maincontent m-2">
           <div class="text">
             <label for="title" id="title">Title</label>
             <input type="text" id="postinput" />
@@ -104,17 +104,22 @@
           <div class="but1">
             <button onclick="showPostcard()" class="but11">Post It!</button>
           </div>
+        </div>
+        </div>
+    
+        <!-- end od col-4 -->
+         <div class="col-6 mt-2">
           <div id="display">
-            <div class="card" style="width: 18rem;">
-              <!-- <div class="card-body">
+            <div class="card">
+              <div class="card-body">
                 <h5 class="card-title"> title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
               </div>
             </div>
-          </div>
-        </div>
-      </div> -->
+          
+      </div>
     </div>
+    </div>   
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
