--- a/postr/index.html
+++ b/postr/index.html
@@ -73,8 +73,8 @@
     </form>
     </div>
     <!-- postcard -->
-    <div id="postcard" class="container-fluid postapp" style="display: none">
-      <nav class="navbar navbar-expand-lg mynav">
+    <div id="postcard" class="container-fluid " style="display: none">
+      <nav class="navbar  mynav">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
             ><img src="./img/message.png" alt="" height="80px"
@@ -83,7 +83,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active post" aria-current="page" href="#"
+                <a class="nav-link  post" aria-current="page" href=""
                   >Post Card</a
                 >
               </li>
@@ -102,6 +102,13 @@
           <div class="descrip">
             <label for="description">Description</label>
             <textarea id="about"></textarea>
+          </div>
+          <div class="images">
+            <img onclick="imagepost('./img/img1.avif')" class="bgimg"  src="./img/img1.avif" alt="" height="50px" width="50px">
+            <img onclick="imagepost('./img/img2.png')" class="bgimg" src="./img/img2.png" alt="" height="50px" width="50px">
+            <img onclick="imagepost('./img/img3.jfif')" class="bgimg" src="./img/img3.jfif" alt="" height="50px" width="50px">
+            <img onclick="imagepost('./img/img4.jpg')" class="bgimg" src="./img/img4.jpg" alt="" height="50px" width="50px">
+
           </div>
           <div class="but1">
             <button onclick="showPostcard()" class="but11">Post It!</button>
