--- a/postr/index.html
+++ b/postr/index.html
@@ -81,11 +81,11 @@
           /></a>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto mb-2 ">
               <li class="nav-item">
-                <a class="nav-link  post" aria-current="page" href=""
-                  >Post Card</a
-                >
+                <a class="nav-link  post" aria-current="page" href="">Post</a>
+                  
+                
               </li>
             </ul>
           </div>
@@ -104,11 +104,10 @@
             <textarea id="about"></textarea>
           </div>
           <div class="images">
-            <img onclick="imagepost('./img/img1.avif')" class="bgimg"  src="./img/img1.avif" alt="" height="50px" width="50px">
-            <img onclick="imagepost('./img/img2.png')" class="bgimg" src="./img/img2.png" alt="" height="50px" width="50px">
-            <img onclick="imagepost('./img/img3.jfif')" class="bgimg" src="./img/img3.jfif" alt="" height="50px" width="50px">
-            <img onclick="imagepost('./img/img4.jpg')" class="bgimg" src="./img/img4.jpg" alt="" height="50px" width="50px">
-
+            <img  onclick="imagepost('./img/img1.avif')" class="bgimg"  src="./img/img1.avif" alt="" height="50px" width="50px">
+            <img onclick="imagepost('./img/img2.jpeg')" class="bgimg" src="./img/img2.jpeg" alt="" height="50px" width="50px">
+            <img onclick="imagepost('./img/img3.jpg')" class="bgimg" src="./img/img3.jpg" alt="" height="50px" width="50px">
+            <img onclick="imagepost('./img/img44.jpg')" class="bgimg" src="./img/img44.jpg" alt="" height="50px" width="50px">
           </div>
           <div class="but1">
             <button onclick="showPostcard()" class="but11">Post It!</button>
